Updates for RSS

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ auto: true
 
 name: amaslenn.github.com
 description: Blog of amaslenn
-url: amaslenn.github.com
+url: http://amaslenn.github.com
 
 # analytics
 analytics:
