--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@ auto: true
 
 name: amaslenn.github.com
 description: Blog of amaslenn
-url: http://amaslenn.github.com
+url: http://amaslenn.github.io
+
+safe: false
 
 # analytics
 analytics:
