Removed deprecated options from _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
-auto: true
-
 name: amaslenn.github.com
 description: Blog of amaslenn
 url: http://amaslenn.github.io
 
 safe: true
 lsi: false
-pygments: true
+highlighter: pygments
 
 # analytics
 analytics:
