--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,27 @@
-name: amaslenn.github.com
-description: Blog of amaslenn
-url: http://amaslenn.github.io
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing these this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
 
-safe: true
-lsi: false
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: amaslenn.github.io
+description: About anything
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://amaslenn.github.io" # the base hostname & protocol for your site
+twitter_username: amaslenn
+github_username:  amaslenn
+
+# Build settings
+markdown: kramdown
+theme: minima
 highlighter: pygments
-
-# analytics
-analytics:
-  provider: google
-  google:
-    tracking_id: 'UA-37715886-1'
-
-# comments
-comments:
-  provider: disqus
-  disqus:
-    short_name: amaslenn
+lsi: false
