--- a/_config.yml
+++ b/_config.yml
@@ -23,5 +23,5 @@ github_username:  amaslenn
 # Build settings
 markdown: kramdown
 theme: minima
-highlighter: pygments
+highlighter: rouge
 lsi: false
