--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,6 @@ github_username:  amaslenn
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-cayman
 highlighter: rouge
 lsi: false
